[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_frontend_package"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "" }
authors = []
dependencies = []
version = "0.1.0"

[tool.setuptools]
packages = { find = { } }
include-package-data = true